fixed blog overflow on index

--- a/static/styles.css
+++ b/static/styles.css
@@ -60,6 +60,7 @@ a.search_result
     -webkit-line-clamp: 3; /* number of lines to show */
     -webkit-box-orient: vertical;
     margin-bottom: 5px;    
+    white-space: nowrap;
     vertical-align: middle;
     
  }
